数据库的java生成

--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,5 +1,6 @@
 /SpringMVC-servlet.xml
-/applicationContext.xml
-/cn
-/log4j.properties
 /Test.class
+/applicationContext.xml
+/log4j.properties
+/snippet
+/cn
