--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Wed Aug 16 15:26:23 CST 2017
+#Wed Aug 16 16:01:32 CST 2017
 eclipse.preferences.version=1
+encoding//WebRoot/assets/js/theme.js=UTF-8
+encoding//WebRoot/manager/assets/js/theme.js=UTF-8
 encoding/<project>=GBK
